--- a/html/_/index.html
+++ b/html/_/index.html
@@ -296,7 +296,7 @@ crossorigin=""/>
   <div class="container-fluid">
     <div class="row">
       <!--1ère colonne-->
-    <div class="col-xs-12 col-sm-12 col-lg-4 panelcontent">
+    <div class="col-xs-12 col-sm-12 col-lg-6 panelcontent">
       <p>
         <h2 class="item d-inline text-size-16px">
           <span lang="fr"><b>Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b></span>
@@ -336,48 +336,48 @@ crossorigin=""/>
       </p>
     </div>
       <!--2ème colonne-->
-    <div class="col-xs-12 col-sm-12 col-lg-5 panelcontent">
-      <p>
-        <h2 class="item d-inline text-size-16px">
-          <span lang="fr"><b>N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b></span>
-          <span lang="en"><b>CAS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></span>
-          <span id="modalbody-cas" class="textitem"></span>
-        </h2>
-        <br>
-        <h3 class="item d-inline text-size-16px">
-          <span lang="fr"><b>N° EINECS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification de la matière première dans l'Inventaire Européen des Substances chimiques Commerciales Existantes."></sup> :</b></span>
-          <span lang="en"><b>EINECS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material in the European INventory of Existing Commercial chemical Substances."></sup> :</b></span>
-          <span id="modalbody-einecs" class="textitem"></span>
-        </h3>
-        <br>
-        <h3 class="item d-inline text-size-16px">
-          <span lang="fr"><b>N° FEMA <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première au sein de la base de données Flavor Extract Manufacturers Association"></sup> :</b></span>
-          <span lang="en"><b>FEMA number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material in the Flavor Extract Manufacturers Association."></sup> :</b></span>
-          <span id="modalbody-fema" class="textitem"></span>
-        </h3>
-        <br>
-        <h3 class="item d-inline text-size-16px">
-          <span lang="fr"><b>N° JECFA <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b></span>
-          <span lang="en"><b>JECFA number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></span>
-          <span id="modalbody-jecfa" class="textitem"></span>
-        </h3>
-        <br>
-        <h3 class="item d-inline text-size-16px">
-          <span lang="fr"><b>N° FLAVIS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première dans le EU FLAVouring Information System."></sup> :</b></span>
-          <span lang="en"><b>FLAVIS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material in the EU FLAVouring Information System."></sup> :</b></span>
-          <span id="modalbody-flavis" class="textitem"></span>
-        </h3> 
-      </p>
-      <p>
+    <div class="col-xs-12 col-sm-12 col-lg-6 panelcontent">
+      <div class="row col-12">
+        <p>
+          <h2 class="item d-inline text-size-16px">
+            <span lang="fr"><b>N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b></span>
+            <span lang="en"><b>CAS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></span>
+            <span id="modalbody-cas" class="textitem"></span>
+          </h2>
+          <br>
+          <h3 class="item d-inline text-size-16px">
+            <span lang="fr"><b>N° EINECS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification de la matière première dans l'Inventaire Européen des Substances chimiques Commerciales Existantes."></sup> :</b></span>
+            <span lang="en"><b>EINECS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material in the European INventory of Existing Commercial chemical Substances."></sup> :</b></span>
+            <span id="modalbody-einecs" class="textitem"></span>
+          </h3>
+          <br>
+          <h3 class="item d-inline text-size-16px">
+            <span lang="fr"><b>N° FEMA <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première au sein de la base de données Flavor Extract Manufacturers Association"></sup> :</b></span>
+            <span lang="en"><b>FEMA number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material in the Flavor Extract Manufacturers Association."></sup> :</b></span>
+            <span id="modalbody-fema" class="textitem"></span>
+          </h3>
+          <br>
+          <h3 class="item d-inline text-size-16px">
+            <span lang="fr"><b>N° JECFA <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b></span>
+            <span lang="en"><b>JECFA number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></span>
+            <span id="modalbody-jecfa" class="textitem"></span>
+          </h3>
+          <br>
+          <h3 class="item d-inline text-size-16px">
+            <span lang="fr"><b>N° FLAVIS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première dans le EU FLAVouring Information System."></sup> :</b></span>
+            <span lang="en"><b>FLAVIS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material in the EU FLAVouring Information System."></sup> :</b></span>
+            <span id="modalbody-flavis" class="textitem"></span>
+          </h3> 
+        </p>
+        <div id="modalbody-pict" class="imgmp  order-first order-sm-first order-lg-last"></div>
+      </div>
+      <div class="row col-12">
         <h3 class="item d-inline text-size-16px">
           <span lang="fr"><b>Stabilité <sup class="fas fa-question-circle iconetab" title="Comportement de la matière première sous des conditions de haute température, de lumière, et en bases fonctionnelles diverses."></sup> :</b></span>
           <span lang="en"><b>Stability <sup class="fas fa-question-circle iconetab" title="Aspect, color, odor and molecular changes according to the conditions imposed to the raw material."></sup> :</b></span>
           <span id="modalbody-stab" class="textitem"></span>
         </h3>
-      </p>
-    </div>
-    <!-- Colonne Image-->
-    <div id="modalbody-pict" class="imgmp  col-xs-12 col-sm-12 col-lg-3  order-first order-sm-first order-lg-last"></div>
+      </div>
     </div><!--Fin row-->
   </div><!--Fin container-->
 </div><!--Fin panel content-->
