--- a/html/_/index.html
+++ b/html/_/index.html
@@ -338,6 +338,7 @@ crossorigin=""/>
       <!--2ème colonne-->
     <div class="col-xs-12 col-sm-12 col-lg-6 panelcontent">
       <div class="row col-12">
+        <div class="col-6">
         <p>
           <h2 class="item d-inline text-size-16px">
             <span lang="fr"><b>N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b></span>
@@ -369,7 +370,8 @@ crossorigin=""/>
             <span id="modalbody-flavis" class="textitem"></span>
           </h3> 
         </p>
-        <div id="modalbody-pict" class="imgmp  order-first order-sm-first order-lg-last"></div>
+        </div>
+        <div id="modalbody-pict" class="imgmp col-6 order-first order-sm-first order-lg-last"></div>-->
       </div>
       <div class="row col-12">
         <h3 class="item d-inline text-size-16px">
