--- a/html/_/index.html
+++ b/html/_/index.html
@@ -337,8 +337,8 @@ crossorigin=""/>
     </div>
       <!--2ème colonne-->
     <div class="col-xs-12 col-sm-12 col-lg-6 panelcontent">
-      <div class="row col-12">
-        <div class="col-6">
+      <div class="col-12">
+        <div class="col-8">
         <p>
           <h2 class="item d-inline text-size-16px">
             <span lang="fr"><b>N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b></span>
@@ -371,9 +371,9 @@ crossorigin=""/>
           </h3> 
         </p>
         </div>
-        <div id="modalbody-pict" class="imgmp col-6 order-first order-sm-first order-lg-last"></div>-->
+        <div id="modalbody-pict" class="imgmp col-4 order-first order-sm-first order-lg-last"></div>
       </div>
-      <div class="row col-12">
+      <div class="col-12">
         <h3 class="item d-inline text-size-16px">
           <span lang="fr"><b>Stabilité <sup class="fas fa-question-circle iconetab" title="Comportement de la matière première sous des conditions de haute température, de lumière, et en bases fonctionnelles diverses."></sup> :</b></span>
           <span lang="en"><b>Stability <sup class="fas fa-question-circle iconetab" title="Aspect, color, odor and molecular changes according to the conditions imposed to the raw material."></sup> :</b></span>
