--- a/html/_/index.html
+++ b/html/_/index.html
@@ -373,7 +373,7 @@ crossorigin=""/>
         </div>
         <div id="modalbody-pict" class="imgmp col-3 order-first order-sm-first order-lg-last"></div>
         </div>
-        <div class="col-12">
+        <div class="row col-12">
           <h3 class="item d-inline text-size-16px">
             <span lang="fr"><b>Stabilité <sup class="fas fa-question-circle iconetab" title="Comportement de la matière première sous des conditions de haute température, de lumière, et en bases fonctionnelles diverses."></sup> :</b></span>
             <span lang="en"><b>Stability <sup class="fas fa-question-circle iconetab" title="Aspect, color, odor and molecular changes according to the conditions imposed to the raw material."></sup> :</b></span>
