--- a/html/_/index.html
+++ b/html/_/index.html
@@ -381,7 +381,7 @@ crossorigin=""/>
             </h3> 
           </p>
         </div>
-        <div id="modalbody-pict" class="imgmp col-3 order-first order-sm-first order-lg-last"></div>
+        <div id="modalbody-pict" class="imgmp offset-1 col-3 order-first order-sm-first order-lg-last"></div>
         </div>
         <div class="row col-12">
           <h3 class="item d-inline text-size-16px">
