--- a/html/_/index.html
+++ b/html/_/index.html
@@ -338,7 +338,7 @@ crossorigin=""/>
       <!--2ème colonne-->
     <div class="col-xs-12 col-sm-12 col-lg-6 panelcontent">
         <div class="row">
-        <div class="col-7">
+        <div class="col-8">
           <p>
             <h2 class="item d-inline text-size-16px">
               <span lang="fr"><b>N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b></span>
@@ -381,7 +381,7 @@ crossorigin=""/>
             </h3> 
           </p>
         </div>
-        <div id="modalbody-pict" class="imgmp offset-1 col-3 order-first order-sm-first order-lg-last"></div>
+        <div id="modalbody-pict" class="imgmp col-4 order-first order-sm-first order-lg-last"></div>
         </div>
         <div class="row col-12">
           <h3 class="item d-inline text-size-16px">
