--- a/html/_/index.html
+++ b/html/_/index.html
@@ -383,13 +383,15 @@ crossorigin=""/>
         </div>
         <div id="modalbody-pict" class="imgmp col-4 order-first order-sm-first order-lg-last"></div>
         </div>
-        <div class="row col-12">
+        <div class="row"> 
+          <div class="col-12">
           <h3 class="item d-inline text-size-16px">
             <span lang="fr"><b>Stabilité <sup class="fas fa-question-circle iconetab" title="Comportement de la matière première sous des conditions de haute température, de lumière, et en bases fonctionnelles diverses."></sup> :</b></span>
             <span lang="en"><b>Stability <sup class="fas fa-question-circle iconetab" title="Aspect, color, odor and molecular changes according to the conditions imposed to the raw material."></sup> :</b></span>
             <span id="modalbody-stab" class="textitem"></span>
           </h3>
         </div>
+      </div>
     </div>
     </div><!--Fin row-->
   </div><!--Fin container-->
