--- a/html/_/index.html
+++ b/html/_/index.html
@@ -381,7 +381,7 @@ crossorigin=""/>
               </h3> 
             </p>
           </div>
-          <div id="modalbody-pict" class="imgmp col-4 order-first order-sm-first order-lg-last"></div>
+          <div id="modalbody-pict" class="imgmp offset-1 col-4 order-first order-sm-first order-lg-last"></div>
         </div>
         <div class="row"> 
           <div class="col-12">
