--- a/html/_/index.html
+++ b/html/_/index.html
@@ -403,7 +403,7 @@ crossorigin=""/>
   <div class="row">
   <div class="col-12 panelcontent">
     <div class="row">
-      <div class="col-8">
+      <div class="col-9">
         <p>
           <h2 class="item  d-inline text-size-16px">
             <span lang="fr"><b>Nom botanique <sup class="fas fa-question-circle iconetab" title="Nom de la plante ou de l'animal selon le Code International de Nomenclature Botanique."></sup> :</b></span>
@@ -433,7 +433,7 @@ crossorigin=""/>
         </p> 
       </div>
       <!-- Colonne Image-->
-      <div id="modalbody-pictA" class="imgmp  col-xs-12 col-sm-12 col-md-12 offset-lg-1 col-lg-4  order-first order-sm-first order-lg-last"></div>
+      <div id="modalbody-pictA" class="imgmp  col-xs-12 col-sm-12 col-md-12 lg-offset-1 col-lg-4  order-first order-sm-first order-lg-last"></div>
     </div>
     <div class="row">
       <div class="col-12">
