--- a/html/_/index.html
+++ b/html/_/index.html
@@ -403,7 +403,7 @@ crossorigin=""/>
   <div class="row">
   <div class="col-12 panelcontent">
     <div class="row">
-      <div class="col-9">
+      <div class="col-9 lg-ml-1">
         <p>
           <h2 class="item  d-inline text-size-16px">
             <span lang="fr"><b>Nom botanique <sup class="fas fa-question-circle iconetab" title="Nom de la plante ou de l'animal selon le Code International de Nomenclature Botanique."></sup> :</b></span>
