--- a/html/_/index.html
+++ b/html/_/index.html
@@ -403,7 +403,7 @@ crossorigin=""/>
   <div class="row">
   <div class="col-12 panelcontent">
     <div class="row">
-      <div class="col-9 lg-ml-1">
+      <div class="col-9">
         <p>
           <h2 class="item  d-inline text-size-16px">
             <span lang="fr"><b>Nom botanique <sup class="fas fa-question-circle iconetab" title="Nom de la plante ou de l'animal selon le Code International de Nomenclature Botanique."></sup> :</b></span>
@@ -436,7 +436,7 @@ crossorigin=""/>
       <div id="modalbody-pictA" class="imgmp  col-xs-12 col-sm-12 col-md-12 lg-offset-1 col-lg-4  order-first order-sm-first order-lg-last"></div>
     </div>
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 mt-0">
         <p>
           <h2 class="item d-inline mt-0 text-size-16px">
             <span lang="fr"><b>Méthode d'obtention <sup class="fas fa-question-circle iconetab" title="Méthode de culture et d'extraction de la matière première."></sup> :</b></span>
