--- a/html/_/index.html
+++ b/html/_/index.html
@@ -480,9 +480,11 @@ crossorigin=""/>
       <div class="col-12">
         <!--Block Allergènes-->
         <div class="blockallergenes m-0">
-          <h3 class="item d-inline text-size-16px">
-              <b lang="fr">Allergènes <sup class="fas fa-question-circle iconetab" title="Il existe 26 allergènes en parfumerie. Leur utilisation est limitée à 10 ppm dans le produit fini pour les produits non rincés (eaux de toilette par exemple), contre 100 ppm pour les produits rincés (gels douche par exemple). Une réaction allergique à un allergène de parfumerie et cosmétiques n'apparaît que pour 1 à 3% de la population européenne (source : CSSC). Il est donc rare d'être allergique à l'une de ces substances. Quoi qu'il en soit, les allergènes ont une utilisation limitée dans les produits parfumés, pour éviter toute réaction à ces produits."></sup> :</b>
-              <b lang="en">Allergens <sup class="fas fa-question-circle iconetab" title="26 allergens are known in perfumery. Their use is limited to 10 ppm in finished products for non-rinced products (eaux de toilette for example), and 100 ppm for rinced products (shower gels for example)."></sup> :</b>
+          <h2 class="item d-inline text-size-16px">
+            <span lang="fr"><b>Allergènes <sup class="fas fa-question-circle iconetab" title="Il existe 26 allergènes en parfumerie. Leur utilisation est limitée à 10 ppm dans le produit fini pour les produits non rincés (eaux de toilette par exemple), contre 100 ppm pour les produits rincés (gels douche par exemple). Une réaction allergique à un allergène de parfumerie et cosmétiques n'apparaît que pour 1 à 3% de la population européenne (source : CSSC). Il est donc rare d'être allergique à l'une de ces substances. Quoi qu'il en soit, les allergènes ont une utilisation limitée dans les produits parfumés, pour éviter toute réaction à ces produits."></sup> :</b>
+            <span lang="en"><b>Allergens <sup class="fas fa-question-circle iconetab" title="26 allergens are known in perfumery. Their use is limited to 10 ppm in finished products for non-rinced products (eaux de toilette for example), and 100 ppm for rinced products (shower gels for example)."></sup> :</b>
+          </h2>
+          <h3 class="textitem d-inline">
               <span id="modalbody-allergenes" class="textitem"></span>
           </h3>
           <p class="lienarticlereglementation mt-1">
@@ -497,10 +499,10 @@ crossorigin=""/>
               <b lang="fr">IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</b>
               <b lang="en">IFRA <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides maximum uses for some raw materials in finished products. The notices given by this association have a great value in the perfume industry. Respecting IFRA standards is a guarantee of quality and security when using the perfume."></sup> :</b>
             </h2>
-            <span class="IFRA-show-nothing textitem">
+            <h3 class="IFRA-show-nothing textitem d-inline">
               <span lang="fr">Ingrédient non réglementé</span>
               <span lang="en">This ingredient is not restricted</span>
-            </span>
+            </h3>
             <br>
             <!--Onglets pour les amendements IFRA-->
             <div class="panel-heading m-0 p-0">
@@ -532,98 +534,106 @@ crossorigin=""/>
                     <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires, Tables, Annexe I-->
                     <div class="blockifra1 mt-1">
                       <!--Type de restriction-->
-                      <h3 class="restriction d-inline text-size-14px IFRA-infos">
+                      <h2 class="restriction d-inline text-size-14px IFRA-infos">
                         <span>
                           <b lang="fr">Type de restriction <sup class="fas fa-question-circle iconetab" title="L'IFRA défini plusieurs type de restriction en fonction de la nature de l'ingrédient concerné et de sa dangerosité."></sup> :</b>
                           <b lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="IFRA defines several types of restriction according to the nature and dangerousness of the concerned ingredient. "></sup> :</b>
                         </span>
+                      </h2>
+                      <h3 class="textitem d-inline">
                         <span class="modalbody-ifra-48 textitem"></span>
                       </h3>
                       <br>
                       <!--Cause d'apparition de l'ingrédients concerné-->
-                      <h3 class="cause d-inline text-size-14px IFRA-infos">
+                      <h2 class="cause d-inline text-size-14px IFRA-infos">
                         <span>
                           <b lang="fr">Cause de la restriction <sup class="fas fa-question-circle iconetab" title="Tous les ingrédients ne sont pas réglementés pour la même raison, l'IFRA précise donc les propriétés de l'ingrédient responsables de la restriction."></sup> :</b>
                           <b lang="en">Cause of restriction <sup class="fas fa-question-circle iconetab" title="All ingredients are not regulated for the same reason, so IFRA specifies the properties of the ingredient responsible for the restriction."></sup> :</b>
                         </span>
+                      </h2>
+                      <h3 class="textitem d-inline">
                         <span class="modalbody-cause-48 textitem"></span>
                       </h3>
                       <br>
                       <!--Amendement d'apparition de l'ingrédients concerné-->
-                      <h3 class="amendment d-inline text-size-14px IFRA-infos">
+                      <h2 class="amendment d-inline text-size-14px IFRA-infos">
                         <span>
                           <b lang="fr">Amendement <sup class="fas fa-question-circle iconetab" title="Numéro du dernier amendement dans lequel le standard de l'ingrédient a été modifié. A ce jour, nous en sommes au 49ème. "></sup> :</b>
                           <b lang="en">Amendment <sup class="fas fa-question-circle iconetab" title="Number of the last amendment in which this ingredient's regulation was modified. Today, we have reached the 49th"></sup> :</b>
                         </span>
+                      </h2>
+                      <h3 class="textitem d-inline">
                         <span class="modalbody-amendment-48 textitem"></span>
                       </h3>
                       <br>
                       <!--Commentaires-->
-                      <h3 class="commentaires d-inline text-size-14px IFRA-infos">
+                      <h2 class="commentaires d-inline text-size-14px IFRA-infos">
                         <span>
                           <b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients."></sup> :</b>
                           <b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions."></sup> :</b>
                         </span>
+                      </h2>
+                      <h3 class="textitem d-inline">
                         <span class="modalbody-commentifra-48 textitem"></span>  
                       </h3>
 
                       <!--Blocktable contient tout les tableaux + les paragraphes de responsabilité et le lien vers les modaux IFRA-->
                       <div class="blocktable mt-3">
                         <!--Titre des tableaux : "Dosage limite recommandé"-->
-                        <h3 class="d-inline text-size-14px">
+                        <h2 class="d-inline text-size-14px">
                           <span>
                             <b lang="fr">Dosage limite recommandé <sup class="fas fa-question-circle iconetab" title="L'IFRA recommande dans ses standards un dosage maximum pour chaque produit réglementé et pour chaque catégorie de produit fini. Il faut ainsi voir ces pourcentages comme la plus haute concentration recommandée en ingrédient réglementé dans le produit fini."></sup> :</b>
                             <b lang="en">Quantitative usage limits <sup class="fas fa-question-circle iconetab" title="In its standards, the IFRA recommends a maximum dosage for each regulated ingredient and for every category of finished product. These percentages should therefore be interpreted as the highest recommended concentration of the regulated ingredient in the finished product."></sup> :</b>
                           </span>  
-                        </h3>
+                        </h2>
                         <!-- Là on arrive dans les types de tableau, il y en a 3 . Ils dépendent du contenu de modalbody-ifra (type d'amendement)-->
                         <div class="table-responsive text-center m-0">
                               <table class="table1 main-48th-IFRA-table IFRA-table mb-3">
                                 <!-- EN-TETE DU TABLEAU-->
                                 <tr>
                                   <th>
-                                    <span lang="fr">Cat.1 <sup class="fas fa-question-circle iconetab" title="Produits pour les lèvres"></sup>
-                                    <span lang="en">Cat.1 <sup class="fas fa-question-circle iconetab" title="Lip Products"></sup>
+                                    <span lang="fr">Cat.1 <sup class="fas fa-question-circle iconetab" title="Produits pour les lèvres"></sup></span>
+                                    <span lang="en">Cat.1 <sup class="fas fa-question-circle iconetab" title="Lip Products"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.2 <sup class="fas fa-question-circle iconetab" title="Déodorants/Antitranspirants"></sup>
-                                    <span lang="en">Cat.2 <sup class="fas fa-question-circle iconetab" title="Deodorants/Antiperspirants"></sup>
+                                    <span lang="fr">Cat.2 <sup class="fas fa-question-circle iconetab" title="Déodorants/Antitranspirants"></sup></span>
+                                    <span lang="en">Cat.2 <sup class="fas fa-question-circle iconetab" title="Deodorants/Antiperspirants"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.3 <sup class="fas fa-question-circle iconetab" title="Produits hydroalcoolique rincés"></sup>
-                                    <span lang="en">Cat.3 <sup class="fas fa-question-circle iconetab" title="Hydroalcoholics for Shaved Skin"></sup>
+                                    <span lang="fr">Cat.3 <sup class="fas fa-question-circle iconetab" title="Produits hydroalcoolique rincés"></sup></span>
+                                    <span lang="en">Cat.3 <sup class="fas fa-question-circle iconetab" title="Hydroalcoholics for Shaved Skin"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.4 <sup class="fas fa-question-circle iconetab" title="Produits hydroalcoolique non rincés"></sup>
-                                    <span lang="en">Cat.4 <sup class="fas fa-question-circle iconetab" title="Hydroalcoholics for Unshaved Skin"></sup>
+                                    <span lang="fr">Cat.4 <sup class="fas fa-question-circle iconetab" title="Produits hydroalcoolique non rincés"></sup></span>
+                                    <span lang="en">Cat.4 <sup class="fas fa-question-circle iconetab" title="Hydroalcoholics for Unshaved Skin"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.5 <sup class="fas fa-question-circle iconetab" title="Crèmes pour les mains"></sup>
-                                    <span lang="en">Cat.5 <sup class="fas fa-question-circle iconetab" title="Hand Cream"></sup>
+                                    <span lang="fr">Cat.5 <sup class="fas fa-question-circle iconetab" title="Crèmes pour les mains"></sup></span>
+                                    <span lang="en">Cat.5 <sup class="fas fa-question-circle iconetab" title="Hand Cream"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.6 <sup class="fas fa-question-circle iconetab" title="Bains de bouche"></sup>
-                                    <span lang="en">Cat.6 <sup class="fas fa-question-circle iconetab" title="Mouthwash"></sup>
+                                    <span lang="fr">Cat.6 <sup class="fas fa-question-circle iconetab" title="Bains de bouche"></sup></span>
+                                    <span lang="en">Cat.6 <sup class="fas fa-question-circle iconetab" title="Mouthwash"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.7 <sup class="fas fa-question-circle iconetab" title="Soins intimes"></sup>
-                                    <span lang="en">Cat.7 <sup class="fas fa-question-circle iconetab" title="Intimate Wipes"></sup>
+                                    <span lang="fr">Cat.7 <sup class="fas fa-question-circle iconetab" title="Soins intimes"></sup></span>
+                                    <span lang="en">Cat.7 <sup class="fas fa-question-circle iconetab" title="Intimate Wipes"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.8 <sup class="fas fa-question-circle iconetab" title="Produits coiffants"></sup>
-                                    <span lang="en">Cat.8 <sup class="fas fa-question-circle iconetab" title="Hair Styling Aids"></sup>
+                                    <span lang="fr">Cat.8 <sup class="fas fa-question-circle iconetab" title="Produits coiffants"></sup></span>
+                                    <span lang="en">Cat.8 <sup class="fas fa-question-circle iconetab" title="Hair Styling Aids"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.9 <sup class="fas fa-question-circle iconetab" title="Produits pour les cheveux rincés"></sup>
-                                    <span lang="en">Cat.9 <sup class="fas fa-question-circle iconetab" title="Rinse-off Hair Conditioners"></sup>
+                                    <span lang="fr">Cat.9 <sup class="fas fa-question-circle iconetab" title="Produits pour les cheveux rincés"></sup></span>
+                                    <span lang="en">Cat.9 <sup class="fas fa-question-circle iconetab" title="Rinse-off Hair Conditioners"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.10 <sup class="fas fa-question-circle iconetab" title="Nettoyant pour surface dure"></sup>
-                                    <span lang="en">Cat.10 <sup class="fas fa-question-circle iconetab" title="Hard Surface Cleaners"></sup>
+                                    <span lang="fr">Cat.10 <sup class="fas fa-question-circle iconetab" title="Nettoyant pour surface dure"></sup></span>
+                                    <span lang="en">Cat.10 <sup class="fas fa-question-circle iconetab" title="Hard Surface Cleaners"></sup></span>
                                   </th>
                                   <th>
-                                    <span lang="fr">Cat.11 <sup class="fas fa-question-circle iconetab" title="Bougies"></sup>
-                                    <span lang="en">Cat.11 <sup class="fas fa-question-circle iconetab" title="Candles"></sup>
+                                    <span lang="fr">Cat.11 <sup class="fas fa-question-circle iconetab" title="Bougies"></sup></span>
+                                    <span lang="en">Cat.11 <sup class="fas fa-question-circle iconetab" title="Candles"></sup></span>
                                   </th>
                                 </tr>
                                 <!-- CORPS DU TABLEAU-->
