--- a/html/_/index.html
+++ b/html/_/index.html
@@ -746,38 +746,47 @@ crossorigin=""/>
 
                     <div class="blockcategories49 mt-1">
                       <!--Type de restriction-->
-                      <h3 class="restriction49 d-inline text-size-14px  IFRA-infos">
+                      <h2 class="restriction49 d-inline text-size-14px  IFRA-infos">
                         <span>
                           <b lang="fr">Type de restriction <sup class="fas fa-question-circle iconetab" title="L'IFRA défini plusieurs type de restriction en fonction de la nature de l'ingrédient concerné et de sa dangerosité."></sup> :</b>
                           <b lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="IFRA defines several types of restriction according to the nature and dangerousness of the concerned ingredient. "></sup> :</b>
+                        </span>
+                      </h2>
+                      <h3 class="textitem d-inline">
                           <span class="modalbody-ifra-49 textitem"></span>
                         </span>
                       </h3>
                       <br>
                       <!--Cause d'apparition de l'ingrédients concerné-->
-                      <h3 class="cause d-inline text-size-14px IFRA-infos">
+                      <h2 class="cause d-inline text-size-14px IFRA-infos">
                         <span>
                           <b lang="fr">Cause de la restriction <sup class="fas fa-question-circle iconetab" title="Tous les ingrédients ne sont pas réglementés pour la même raison, l'IFRA précise donc les propriétés de l'ingrédient responsables de la restriction."></sup> :</b>
                           <b lang="en">Cause of restriction <sup class="fas fa-question-circle iconetab" title="All ingredients are not regulated for the same reason, so IFRA specifies the properties of the ingredient responsible for the restriction."></sup> :</b>
                         </span>
+                      </h2>
+                      <h3 class="textitem d-inline">
                         <span class="modalbody-cause-49 textitem"></span>
                       </h3>
                       <br>
                       <!--Amendement d'apparition de l'ingrédients concerné-->
-                      <h3 class="amendment49 d-inline text-size-14px IFRA-infos">
+                      <h2 class="amendment49 d-inline text-size-14px IFRA-infos">
                         <span>
                           <b lang="fr">Amendement <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
                           <b lang="en">Amendment <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
                         </span>
+                      </h2>
+                      <h3 class="textitem d-inline">
                         <span class="modalbody-amendment-49 textitem"></span>
                       </h3>
                       <br>
                       <!--Commentaires-->
-                      <h3 class="commentaires49 d-inline text-size-14px IFRA-infos">
+                      <h2 class="commentaires49 d-inline text-size-14px IFRA-infos">
                         <span>
                           <b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients."></sup> :</b>
                           <b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions."></sup> :</b>
                         </span>
+                      </h2>
+                      <h3 class="textitem d-inline">
                         <span class="modalbody-commentifra-49 textitem"></span>  
                       </h3>
                       
@@ -963,7 +972,7 @@ crossorigin=""/>
           </div><!--Fermeture du tab-content-->
 
           <!--PARAGRAPHE DES LIENS INTERNE/EXTERNE-->
-          <div class="lienarticlereglementation mt-3 mb-1">
+          <p class="lienarticlereglementation mt-3 mb-1">
               <!--Lien externe vers site IFRA-->
               <span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/safe-use/understanding-the-ifra-standards" target="_blank">https://ifrafragrance.org/safe-use/understanding-the-ifra-standards</a></span>
               <span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/safe-use/understanding-the-ifra-standards" target="_blank">https://ifrafragrance.org/safe-use/understanding-the-ifra-standards</a></span>
@@ -971,7 +980,7 @@ crossorigin=""/>
               <!--Lien interne sur l'IFRA-->
               <span lang="fr">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, consultez notre <a href="../_/IFRA.html" target="_BLANK">article sur l'IFRA</a></span>
               <span lang="en">To find out the specificities of each category and the ingredients prohibited by IFRA, click <a href="../_/IFRA.html" target="_BLANK">article about l'IFRA</a></span>
-          </div>
+          </p>
         </div>
         <!--Block Pictogrammes-->
         <!--<div class="blockpicto">
